top logo visibility bug fixed

--- a/css/ieee.css
+++ b/css/ieee.css
@@ -118,5 +118,4 @@
 
 #Layer_1{
     margin-top: -10px;
-    padding-left: 91px;
 }
